--- a/index.html
+++ b/index.html
@@ -105,5 +105,120 @@
             </div>
         </header>
     </section>
+    <main>
+        <section id="features">
+            <div class="container">
+                <div class="row features--container">
+                    <h5 class="features--sub-heading">
+                        FEATURES
+                    </h5>
+                    <h2>
+                        We have Amazing <span class="purple">Service.</span>
+                    </h2>
+                    <p class="features--para">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                    <div class="feature__list">
+                        <div class="feature">
+                            <figure class="feature__img--container">
+                                <img class="feature__img" src="https://treact.owaiskhan.me/static/media/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+                            </figure>
+                            <div class="feature__info">
+                                <h1 class="feature__info--title">
+                                    Secure
+                                </h1>
+                                <p class="feature__info--para">
+                                    We strictly only deal with vendors that provide top notch security.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="feature">
+                            <figure class="feature__img--container">
+                                <img class="feature__img" src="https://treact.owaiskhan.me/static/media/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
+                            </figure>
+                            <div class="feature__info">
+                                <h1 class="feature__info--title">
+                                    24/7 Support
+                                </h1>
+                                <p class="feature__info--para">
+                                    Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.                                </p>
+                            </div>
+                        </div>
+                        <div class="feature">
+                            <figure class="feature__img--container">
+                                <img class="feature__img" src="https://treact.owaiskhan.me/static/media/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
+                            </figure>
+                            <div class="feature__info">
+                                <h1 class="feature__info--title">
+                                    Customisable
+                                </h1>
+                                <p class="feature__info--para">
+                                    Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.                                </p>
+                            </div>
+                        </div>
+                        <div class="feature">
+                            <figure class="feature__img--container">
+                                <img class="feature__img" src="https://treact.owaiskhan.me/static/media/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
+                            </figure>
+                            <div class="feature__info">
+                                <h1 class="feature__info--title">
+                                    Reliable
+                                </h1>
+                                <p class="feature__info--para">
+                                    Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.                                </p>
+                            </div>
+                        </div>
+                        <div class="feature">
+                            <figure class="feature__img--container">
+                                <img class="feature__img" src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+                            </figure>
+                            <div class="feature__info">
+                                <h1 class="feature__info--title">
+                                    Fast
+                                </h1>
+                                <p class="feature__info--para">
+                                    Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.                                </p>
+                            </div>
+                        </div>
+                        <div class="feature">
+                            <figure class="feature__img--container">
+                                <img class="feature__img" src="https://treact.owaiskhan.me/static/media/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="">
+                            </figure>
+                            <div class="feature__info">
+                                <h1 class="feature__info--title">
+                                    Easy
+                                </h1>
+                                <p class="feature__info--para">
+                                    Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="quality_work">
+            <div class="container">
+                <div class="row quality-work--container">
+                    <div class="quality-work__info">
+                        <h5 class="quality-work__info--sub-header">
+                            QUALITY WORK
+                        </h5>
+                        <h2 class="quality-work__info--title">
+                            Designed & Developed by <span class="purple">Professionals.</span>
+                        </h2>
+                        <p class="quality-work__info--para">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                        <div class="quality-work__info--anchor--container">
+                            <a class="quality-work__info--anchor" href="">Learn More</a>
+                        </div>
+                    </div>
+                    <figure class="quality-work__img--container">
+                        <img class="quality-work__img" src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
